# Vistaplanner

./: LICENSE  README.md  desktop_app.py  pyproject.toml
output/: paris-fireworks.geojson  paris-fireworks.kml  tour-eiffel-amenities.geojson  tour-eiffel-map.html  tour-eiffel-score.json  tour-eiffel-transport.geojson
planner/: __init__.py  cli.py  config.py  models.py  scoring.py
planner/data/: __init__.py  viewpoints.py
planner/exporters/: __init__.py  geojson.py  html_map.py  kml.py
planner/providers/: __init__.py  geojson.py  overpass.py
tests/: test_exports.py  test_geojson_provider.py  test_html_map.py  test_overpass.py  test_scoring.py
